@@ -1,3 +1,7 @@
+2002-02-18  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* lisp/nnheader.el (std11-field-value): Fix regexp.
+
 2002-02-15  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* lisp/gnus-art.el (gnus-treat-display-grey-xface): Default to nil
